syntax = "proto3";

package obiente.cloud.deployments.v1;

option go_package = "api/gen/proto/obiente/cloud/deployments/v1;deploymentsv1";

import "google/protobuf/timestamp.proto";
import "obiente/cloud/organizations/v1/organization_service.proto";

// Enumerations for typed fields used by the frontend
enum DeploymentType {
  DEPLOYMENT_TYPE_UNSPECIFIED = 0;
  DOCKER = 1;
  STATIC = 2;
  NODE = 3;
  GO = 4;
}

enum Environment {
  ENVIRONMENT_UNSPECIFIED = 0;
  PRODUCTION = 1;
  STAGING = 2;
  DEVELOPMENT = 3;
}

enum DeploymentStatus {
  DEPLOYMENT_STATUS_UNSPECIFIED = 0;
  CREATED = 1;
  BUILDING = 2;
  RUNNING = 3;
  STOPPED = 4;
  FAILED = 5;
  DEPLOYING = 6;
}

service DeploymentService {
  // List organization deployments
  rpc ListDeployments(ListDeploymentsRequest) returns (ListDeploymentsResponse);
  
  // Create new deployment
  rpc CreateDeployment(CreateDeploymentRequest) returns (CreateDeploymentResponse);
  
  // Get deployment details
  rpc GetDeployment(GetDeploymentRequest) returns (GetDeploymentResponse);
  
  // Update deployment configuration
  rpc UpdateDeployment(UpdateDeploymentRequest) returns (UpdateDeploymentResponse);
  
  // Trigger deployment
  rpc TriggerDeployment(TriggerDeploymentRequest) returns (TriggerDeploymentResponse);
  
  // Stream deployment status updates
  rpc StreamDeploymentStatus(StreamDeploymentStatusRequest) returns (stream DeploymentStatusUpdate);
  
  // Get deployment logs
  rpc GetDeploymentLogs(GetDeploymentLogsRequest) returns (GetDeploymentLogsResponse);

  // Stream deployment logs (tail/follow)
  rpc StreamDeploymentLogs(StreamDeploymentLogsRequest) returns (stream DeploymentLogLine);

  // Start a stopped deployment
  rpc StartDeployment(StartDeploymentRequest) returns (StartDeploymentResponse);

  // Stop a running deployment
  rpc StopDeployment(StopDeploymentRequest) returns (StopDeploymentResponse);

  // Delete a deployment
  rpc DeleteDeployment(DeleteDeploymentRequest) returns (DeleteDeploymentResponse);

  // Restart a deployment
  rpc RestartDeployment(RestartDeploymentRequest) returns (RestartDeploymentResponse);

  // Scale a deployment
  rpc ScaleDeployment(ScaleDeploymentRequest) returns (ScaleDeploymentResponse);

  // Get deployment environment variables
  rpc GetDeploymentEnvVars(GetDeploymentEnvVarsRequest) returns (GetDeploymentEnvVarsResponse);

  // Update deployment environment variables
  rpc UpdateDeploymentEnvVars(UpdateDeploymentEnvVarsRequest) returns (UpdateDeploymentEnvVarsResponse);

  // Get deployment docker compose configuration
  rpc GetDeploymentCompose(GetDeploymentComposeRequest) returns (GetDeploymentComposeResponse);

  // Update deployment docker compose configuration
  rpc UpdateDeploymentCompose(UpdateDeploymentComposeRequest) returns (UpdateDeploymentComposeResponse);

  // GitHub integration
  // List GitHub repositories for the authenticated user
  rpc ListGitHubRepos(ListGitHubReposRequest) returns (ListGitHubReposResponse);
  
  // Get branches for a GitHub repository
  rpc GetGitHubBranches(GetGitHubBranchesRequest) returns (GetGitHubBranchesResponse);
  
  // Get file content from a GitHub repository
  rpc GetGitHubFile(GetGitHubFileRequest) returns (GetGitHubFileResponse);

  // Terminal access
  // Open an interactive terminal session to a deployment container
  // This is a bidirectional stream for interactive terminal communication
  rpc StreamTerminal(stream TerminalInput) returns (stream TerminalOutput);

  // File browser
  // List files in a deployment container
  rpc ListContainerFiles(ListContainerFilesRequest) returns (ListContainerFilesResponse);
  
  // Get file content from a deployment container
  rpc GetContainerFile(GetContainerFileRequest) returns (GetContainerFileResponse);
}

message ListDeploymentsRequest {
  string organization_id = 1;
  optional DeploymentStatus status = 2;
  int32 page = 3;
  int32 per_page = 4;
}

message ListDeploymentsResponse {
  repeated Deployment deployments = 1;
  obiente.cloud.organizations.v1.Pagination pagination = 2;
}

message CreateDeploymentRequest {
  string organization_id = 1;
  string name = 2;
  DeploymentType type = 3; // deployment type enum
  optional string repository_url = 4;
  string branch = 5;
  optional string build_command = 6;
  optional string install_command = 7;
  // Docker/runtime specific
  optional string image = 8;
  optional int32 port = 9;
  map<string, string> env = 10;
  map<string, string> labels = 11;
  optional int64 memory_bytes = 12;
  optional int64 cpu_shares = 13;
  optional int32 replicas = 14;
}

message CreateDeploymentResponse {
  Deployment deployment = 1;
}

message GetDeploymentRequest {
  string organization_id = 1;
  string deployment_id = 2;
}

message GetDeploymentResponse {
  Deployment deployment = 1;
}

message UpdateDeploymentRequest {
  string organization_id = 1;
  string deployment_id = 2;
  optional string name = 3;
  optional string branch = 4;
  optional string build_command = 5;
  optional string install_command = 6;
}

message UpdateDeploymentResponse {
  Deployment deployment = 1;
}

message TriggerDeploymentRequest {
  string organization_id = 1;
  string deployment_id = 2;
}

message TriggerDeploymentResponse {
  string deployment_id = 1;
  string status = 2;
}

message StreamDeploymentStatusRequest {
  string organization_id = 1;
  string deployment_id = 2;
}

message DeploymentStatusUpdate {
  string deployment_id = 1;
  DeploymentStatus status = 2;
  string health_status = 3;
  optional string message = 4;
  google.protobuf.Timestamp timestamp = 5;
}

message GetDeploymentLogsRequest {
  string organization_id = 1;
  string deployment_id = 2;
  optional int32 lines = 3;
  optional bool follow = 4;
}

message GetDeploymentLogsResponse {
  repeated string logs = 1;
}

message StreamDeploymentLogsRequest {
  string organization_id = 1;
  string deployment_id = 2;
  optional int32 tail = 3; // number of lines to tail before following
}

message DeploymentLogLine {
  string deployment_id = 1;
  string line = 2;
  google.protobuf.Timestamp timestamp = 3;
  bool stderr = 4;
}

message StartDeploymentRequest {
  string organization_id = 1;
  string deployment_id = 2;
}

message StartDeploymentResponse {
  Deployment deployment = 1;
}

message StopDeploymentRequest {
  string organization_id = 1;
  string deployment_id = 2;
}

message StopDeploymentResponse {
  Deployment deployment = 1;
}

message DeleteDeploymentRequest {
  string organization_id = 1;
  string deployment_id = 2;
}

message DeleteDeploymentResponse {
  bool success = 1;
}

message RestartDeploymentRequest {
  string organization_id = 1;
  string deployment_id = 2;
}

message RestartDeploymentResponse {
  Deployment deployment = 1;
}

message ScaleDeploymentRequest {
  string organization_id = 1;
  string deployment_id = 2;
  int32 replicas = 3;
}

message ScaleDeploymentResponse {
  Deployment deployment = 1;
}

message GetDeploymentEnvVarsRequest {
  string organization_id = 1;
  string deployment_id = 2;
}

message GetDeploymentEnvVarsResponse {
  map<string, string> env_vars = 1;
}

message UpdateDeploymentEnvVarsRequest {
  string organization_id = 1;
  string deployment_id = 2;
  map<string, string> env_vars = 3;
}

message UpdateDeploymentEnvVarsResponse {
  Deployment deployment = 1;
}

message GetDeploymentComposeRequest {
  string organization_id = 1;
  string deployment_id = 2;
}

message GetDeploymentComposeResponse {
  string compose_yaml = 1;
}

message UpdateDeploymentComposeRequest {
  string organization_id = 1;
  string deployment_id = 2;
  string compose_yaml = 3;
}

message UpdateDeploymentComposeResponse {
  Deployment deployment = 1;
  optional string validation_error = 2;
}

message ListGitHubReposRequest {
  int32 page = 1;
  int32 per_page = 2;
}

message GitHubRepo {
  string id = 1;
  string name = 2;
  string full_name = 3;
  string description = 4;
  string url = 5;
  bool is_private = 6;
  string default_branch = 7;
}

message ListGitHubReposResponse {
  repeated GitHubRepo repos = 1;
  int32 total = 2;
}

message GetGitHubBranchesRequest {
  string repo_full_name = 1; // e.g., "owner/repo"
}

message GitHubBranch {
  string name = 1;
  bool is_default = 2;
  string sha = 3;
}

message GetGitHubBranchesResponse {
  repeated GitHubBranch branches = 1;
}

message GetGitHubFileRequest {
  string repo_full_name = 1; // e.g., "owner/repo"
  string branch = 2;
  string path = 3; // e.g., "docker-compose.yml"
}

message GetGitHubFileResponse {
  string content = 1;
  string encoding = 2; // "base64" or "text"
  int64 size = 3;
}

message TerminalInput {
  string organization_id = 1;
  string deployment_id = 2;
  bytes input = 3; // User keyboard input
  int32 cols = 4; // Terminal width
  int32 rows = 5; // Terminal height
}

message TerminalOutput {
  bytes output = 1; // Terminal stdout/stderr
  bool exit = 2; // Whether the terminal session has ended
}

message ListContainerFilesRequest {
  string organization_id = 1;
  string deployment_id = 2;
  string path = 3; // Directory path (default: "/")
}

message ContainerFile {
  string name = 1;
  string path = 2;
  bool is_directory = 3;
  int64 size = 4;
  string permissions = 5;
  optional string modified_at = 6;
}

message ListContainerFilesResponse {
  repeated ContainerFile files = 1;
  string current_path = 2;
}

message GetContainerFileRequest {
  string organization_id = 1;
  string deployment_id = 2;
  string path = 3; // File path
}

message GetContainerFileResponse {
  string content = 1;
  string encoding = 2; // "text" or "base64"
  int64 size = 3;
}

message Deployment {
  string id = 1;
  string name = 2;
  string domain = 3;
  repeated string custom_domains = 4;
  DeploymentType type = 5;
  optional string repository_url = 6;
  string branch = 7;
  optional string build_command = 8;
  optional string install_command = 9;
  DeploymentStatus status = 10;
  string health_status = 11;
  google.protobuf.Timestamp last_deployed_at = 12;
  int64 bandwidth_usage = 13;
  int64 storage_usage = 14;
  google.protobuf.Timestamp created_at = 15;
  // Build time in seconds
  int32 build_time = 16;
  // Human-readable bundle size (e.g. "3.4MB")
  string size = 17;
  // Environment enum (production/staging/development)
  Environment environment = 18;
  // Docker/runtime specific view
  optional string image = 19;
  optional int32 port = 20;
  optional int32 replicas = 21;
  repeated string container_ids = 22;
  optional string node_id = 23;
  optional string node_hostname = 24;
  // Environment variables
  map<string, string> env_vars = 25;
}